// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ResultItem render missing version and labels 1`] = `

<div>
  <div
    role="link"
    aria-label="Update query to: item"
    class="focus:ring-foreground/15 focus:bg-foreground/3 bg-background hover:bg-foreground/3 flex h-full w-full cursor-pointer flex-col gap-2 rounded px-6 py-3 focus:ring-1 focus:outline-none"
  >
    <div class="flex flex-col items-start justify-between gap-2 md:flex-row md:items-center">
      <div class="flex items-center gap-2">
        <div class="relative size-6 rounded-md border">
          <div class="absolute inset-0 flex aspect-square items-center justify-center rounded-[calc(0.375rem+1px)] bg-gradient-to-tr from-neutral-300 to-neutral-100 dark:from-neutral-900 dark:to-neutral-700">
            <span class="bg-gradient-to-tr from-neutral-500 to-neutral-900 bg-clip-text text-sm text-transparent empty:hidden dark:from-neutral-400 dark:to-neutral-100">
              it
            </span>
          </div>
        </div>
        <div class="inline-flex items-baseline">
          <h3 class="text-lg font-medium tracking-tight">
            item
          </h3>
          <div class="text-muted-foreground ml-3 inline-flex items-baseline gap-1 font-mono text-sm font-medium tabular-nums">
            <span>
            </span>
          </div>
        </div>
      </div>
      <div class="flex items-center gap-2">
        <div class="bg-background flex items-center justify-center rounded-lg border px-2 py-1">
          <span class="text-muted-foreground text-sm">
          </span>
        </div>
      </div>
    </div>
    <div class="**:data-[slot=delimiter]:text-muted-foreground flex flex-wrap items-center gap-1 **:data-[slot=delimiter]:size-5">
    </div>
  </div>
</div>

`;

exports[`ResultItem render stacked many 1`] = `

<div>
  <div
    role="link"
    aria-label="Update query to: many-edges-stacked"
    class="focus:ring-foreground/15 focus:bg-foreground/3 bg-background hover:bg-foreground/3 flex h-full w-full cursor-pointer flex-col gap-2 rounded px-6 py-3 focus:ring-1 focus:outline-none"
  >
    <div class="flex flex-col items-start justify-between gap-2 md:flex-row md:items-center">
      <div class="flex items-center gap-2">
        <div class="relative size-6 rounded-md border">
          <div class="absolute inset-0 flex aspect-square items-center justify-center rounded-[calc(0.375rem+1px)] bg-gradient-to-tr from-neutral-300 to-neutral-100 dark:from-neutral-900 dark:to-neutral-700">
            <span class="bg-gradient-to-tr from-neutral-500 to-neutral-900 bg-clip-text text-sm text-transparent empty:hidden dark:from-neutral-400 dark:to-neutral-100">
              ma
            </span>
          </div>
        </div>
        <div class="inline-flex items-baseline">
          <h3 class="text-lg font-medium tracking-tight">
            many-edges-stacked
          </h3>
          <div class="text-muted-foreground ml-3 inline-flex items-baseline gap-1 font-mono text-sm font-medium tabular-nums">
            <span>
            </span>
          </div>
        </div>
      </div>
      <div class="flex items-center gap-2">
        <div class="bg-background flex items-center justify-center rounded-lg border px-2 py-1">
          <span class="text-muted-foreground text-sm">
            1.1.1
          </span>
        </div>
      </div>
    </div>
    <div class="**:data-[slot=delimiter]:text-muted-foreground flex flex-wrap items-center gap-1 **:data-[slot=delimiter]:size-5">
    </div>
    <div class="flex w-full">
      <div class="flex items-center space-x-1">
        <div>
          <div class="relative flex px-2 items-center justify-center h-[19px] rounded-full cursor-default w-fit bg-fuchsia-100 dark:bg-fuchsia-950 border-[1px] border-fuchsia-500 dark:border-fuchsia-500">
            <span class="text-xs font-medium inline-flex items-center justify-center text-fuchsia-800 dark:text-fuchsia-400">
              peer
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>

`;

exports[`ResultItem render stacked two 1`] = `

<div>
  <div
    role="link"
    aria-label="Update query to: two-edges-stacked"
    class="focus:ring-foreground/15 focus:bg-foreground/3 bg-background hover:bg-foreground/3 flex h-full w-full cursor-pointer flex-col gap-2 rounded px-6 py-3 focus:ring-1 focus:outline-none"
  >
    <div class="flex flex-col items-start justify-between gap-2 md:flex-row md:items-center">
      <div class="flex items-center gap-2">
        <div class="relative size-6 rounded-md border">
          <div class="absolute inset-0 flex aspect-square items-center justify-center rounded-[calc(0.375rem+1px)] bg-gradient-to-tr from-neutral-300 to-neutral-100 dark:from-neutral-900 dark:to-neutral-700">
            <span class="bg-gradient-to-tr from-neutral-500 to-neutral-900 bg-clip-text text-sm text-transparent empty:hidden dark:from-neutral-400 dark:to-neutral-100">
              tw
            </span>
          </div>
        </div>
        <div class="inline-flex items-baseline">
          <h3 class="text-lg font-medium tracking-tight">
            two-edges-stacked
          </h3>
          <div class="text-muted-foreground ml-3 inline-flex items-baseline gap-1 font-mono text-sm font-medium tabular-nums">
            <span>
            </span>
          </div>
        </div>
      </div>
      <div class="flex items-center gap-2">
        <div class="bg-background flex items-center justify-center rounded-lg border px-2 py-1">
          <span class="text-muted-foreground text-sm">
            1.0.0
          </span>
        </div>
      </div>
    </div>
    <div class="**:data-[slot=delimiter]:text-muted-foreground flex flex-wrap items-center gap-1 **:data-[slot=delimiter]:size-5">
    </div>
    <div class="flex w-full">
      <div class="flex items-center space-x-1">
        <div>
          <div class="relative flex px-2 items-center justify-center h-[19px] rounded-full cursor-default w-fit bg-orange-200 dark:bg-orange-950 border-[1px] border-orange-500 dark:border-orange-500">
            <span class="text-xs font-medium inline-flex items-center justify-center text-orange-700 dark:text-orange-500">
              dev
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>

`;

exports[`ResultItem render with item 1`] = `

<div>
  <div
    role="link"
    aria-label="Update query to: item"
    class="focus:ring-foreground/15 focus:bg-foreground/3 bg-background hover:bg-foreground/3 flex h-full w-full cursor-pointer flex-col gap-2 rounded px-6 py-3 focus:ring-1 focus:outline-none"
  >
    <div class="flex flex-col items-start justify-between gap-2 md:flex-row md:items-center">
      <div class="flex items-center gap-2">
        <div class="relative size-6 rounded-md border">
          <div class="absolute inset-0 flex aspect-square items-center justify-center rounded-[calc(0.375rem+1px)] bg-gradient-to-tr from-neutral-300 to-neutral-100 dark:from-neutral-900 dark:to-neutral-700">
            <span class="bg-gradient-to-tr from-neutral-500 to-neutral-900 bg-clip-text text-sm text-transparent empty:hidden dark:from-neutral-400 dark:to-neutral-100">
              it
            </span>
          </div>
        </div>
        <div class="inline-flex items-baseline">
          <h3 class="text-lg font-medium tracking-tight">
            item
          </h3>
          <div class="text-muted-foreground ml-3 inline-flex items-baseline gap-1 font-mono text-sm font-medium tabular-nums">
            <span>
            </span>
          </div>
        </div>
      </div>
      <div class="flex items-center gap-2">
        <div class="bg-background flex items-center justify-center rounded-lg border px-2 py-1">
          <span class="text-muted-foreground text-sm">
            1.0.0
          </span>
        </div>
      </div>
    </div>
    <div class="**:data-[slot=delimiter]:text-muted-foreground flex flex-wrap items-center gap-1 **:data-[slot=delimiter]:size-5">
    </div>
    <div class="flex w-full">
      <div class="flex items-center space-x-1">
        <div>
          <div class="relative flex px-2 items-center justify-center h-[19px] rounded-full cursor-default w-fit bg-blue-200 dark:bg-blue-950 border-[1px] border-blue-500 dark:border-blue-500">
            <span class="text-xs font-medium inline-flex items-center justify-center text-blue-700 dark:text-blue-400">
              prod
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>

`;

exports[`ResultItem render with type 1`] = `

<div>
  <div
    role="link"
    aria-label="Update query to: item"
    class="focus:ring-foreground/15 focus:bg-foreground/3 bg-background hover:bg-foreground/3 flex h-full w-full cursor-pointer flex-col gap-2 rounded px-6 py-3 focus:ring-1 focus:outline-none"
  >
    <div class="flex flex-col items-start justify-between gap-2 md:flex-row md:items-center">
      <div class="flex items-center gap-2">
        <div class="relative size-6 rounded-md border">
          <div class="absolute inset-0 flex aspect-square items-center justify-center rounded-[calc(0.375rem+1px)] bg-gradient-to-tr from-neutral-300 to-neutral-100 dark:from-neutral-900 dark:to-neutral-700">
            <span class="bg-gradient-to-tr from-neutral-500 to-neutral-900 bg-clip-text text-sm text-transparent empty:hidden dark:from-neutral-400 dark:to-neutral-100">
              it
            </span>
          </div>
        </div>
        <div class="inline-flex items-baseline">
          <h3 class="text-lg font-medium tracking-tight">
            item
          </h3>
          <div class="text-muted-foreground ml-3 inline-flex items-baseline gap-1 font-mono text-sm font-medium tabular-nums">
            <span>
            </span>
          </div>
        </div>
      </div>
      <div class="flex items-center gap-2">
        <div class="bg-background flex items-center justify-center rounded-lg border px-2 py-1">
          <span class="text-muted-foreground text-sm">
            1.0.0
          </span>
        </div>
        <div class="flex items-center justify-center empty:hidden">
        </div>
      </div>
    </div>
    <div class="**:data-[slot=delimiter]:text-muted-foreground flex flex-wrap items-center gap-1 **:data-[slot=delimiter]:size-5">
      <div class="text-muted-foreground flex items-center gap-1 text-sm font-medium">
        <span class="bg-foreground/6 text-foreground rounded border px-2 font-mono empty:hidden">
          prod
        </span>
        <p class="align-baseline">
          dep of:
          <span class="text-foreground ml-1">
            npm:from@1.0.0
          </span>
        </p>
      </div>
    </div>
    <div class="flex w-full">
      <div class="flex items-center space-x-1">
        <div>
          <div class="relative flex px-2 items-center justify-center h-[19px] rounded-full cursor-default w-fit bg-blue-200 dark:bg-blue-950 border-[1px] border-blue-500 dark:border-blue-500">
            <span class="text-xs font-medium inline-flex items-center justify-center text-blue-700 dark:text-blue-400">
              prod
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>

`;
